--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "first react learning project",
   "main": "index.js",
   "scripts": {
-    "compile": "babel . --watch --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline"
+    "compile": "babel . --watch --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline",
+    "start-only": "live-server",
+    "start": "npm run compile & npm run start-only"
   },
   "author": "Andy Su",
   "license": "UNLICENSED",
